feat(schematic): move visualization operations endpoints (#2252)
* add new endpoints

* added two endpoints

* add new endpoints

* redid exception handling for new endpoints
