# apps/schematic/api/schematic_api/openapi/openapi.yaml
@@ -523,6 +523,58 @@ paths:
       tags:
       - Storage
       x-openapi-router-controller: schematic_api.controllers.storage_controller
+  /components/{componentLabel}/:
+    get:
+      description: Get all the attributes associated with a specific data model component
+        formatted as a dataframe (stored as a JSON String).
+      operationId: get_component
+      parameters:
+      - description: The label of a component in a schema
+        explode: false
+        in: path
+        name: componentLabel
+        required: true
+        schema:
+          $ref: '#/components/schemas/ComponentLabel'
+        style: simple
+      - description: The URL of a schema in jsonld form
+        explode: true
+        in: query
+        name: schemaUrl
+        required: true
+        schema:
+          $ref: '#/components/schemas/SchemaUrl'
+        style: form
+      - description: Whether to include the indexes of the dataframe in the returned
+          JSON string.
+        explode: true
+        in: query
+        name: includeIndex
+        required: false
+        schema:
+          default: false
+          type: boolean
+        style: form
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                description: The component as a json string
+                type: string
+          description: Success
+        "500":
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/BasicError'
+          description: The request cannot be fulfilled due to an unexpected server
+            error
+      summary: Get all the attributes associated with a specific data model component
+        formatted as a dataframe (stored as a JSON String).
+      tags:
+      - Schema
+      x-openapi-router-controller: schematic_api.controllers.schema_controller
   /connectedNodes:
     get:
       description: Gets a list of connected node pairs
@@ -788,6 +840,40 @@ paths:
           description: The request cannot be fulfilled due to an unexpected server
             error
       summary: Gets properties associated with a given node
+      tags:
+      - Schema
+      x-openapi-router-controller: schematic_api.controllers.schema_controller
+  /schemaAttributes:
+    get:
+      description: Get all the attributes associated with a data model formatted as
+        a dataframe (stored as a JSON String).
+      operationId: get_schema_attributes
+      parameters:
+      - description: The URL of a schema in jsonld form
+        explode: true
+        in: query
+        name: schemaUrl
+        required: true
+        schema:
+          $ref: '#/components/schemas/SchemaUrl'
+        style: form
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                description: The schema as a json string
+                type: string
+          description: Success
+        "500":
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/BasicError'
+          description: The request cannot be fulfilled due to an unexpected server
+            error
+      summary: Get all the attributes associated with a data model formatted as a
+        dataframe (stored as a JSON String).
       tags:
       - Schema
       x-openapi-router-controller: schematic_api.controllers.schema_controller
@@ -1071,6 +1157,108 @@ paths:
       tags:
       - ManifestValidation
       x-openapi-router-controller: schematic_api.controllers.manifest_validation_controller
+  /tangledTreeLayers:
+    get:
+      description: Get tangled tree node layers to display for a given data model
+        and figure type
+      operationId: get_tangled_tree_layers
+      parameters:
+      - description: The URL of a schema in jsonld form
+        explode: true
+        in: query
+        name: schemaUrl
+        required: true
+        schema:
+          $ref: '#/components/schemas/SchemaUrl'
+        style: form
+      - description: Figure type to generate.
+        explode: true
+        in: query
+        name: figureType
+        required: false
+        schema:
+          default: component
+          enum:
+          - component
+          - dependency
+          type: string
+        style: form
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TangledTreeLayers'
+          description: Success
+        "500":
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/BasicError'
+          description: The request cannot be fulfilled due to an unexpected server
+            error
+      summary: Get tangled tree node layers to display for a given data model and
+        figure type
+      tags:
+      - TangledTree
+      x-openapi-router-controller: schematic_api.controllers.tangled_tree_controller
+  /tangledTreeText:
+    get:
+      description: "Get tangled tree plain or higlighted text to display for a given\
+        \ data model, text formatting and figure type"
+      operationId: get_tangled_tree_text
+      parameters:
+      - description: The URL of a schema in jsonld form
+        explode: true
+        in: query
+        name: schemaUrl
+        required: true
+        schema:
+          $ref: '#/components/schemas/SchemaUrl'
+        style: form
+      - description: Figure type to generate.
+        explode: true
+        in: query
+        name: figureType
+        required: false
+        schema:
+          default: component
+          enum:
+          - component
+          - dependency
+          type: string
+        style: form
+      - description: Text formatting type.
+        explode: true
+        in: query
+        name: textFormat
+        required: false
+        schema:
+          default: plain
+          enum:
+          - plain
+          - highlighted
+          type: string
+        style: form
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TangledTreeText'
+          description: Success
+        "500":
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/BasicError'
+          description: The request cannot be fulfilled due to an unexpected server
+            error
+      summary: "Get tangled tree plain or higlighted text to display for a given data\
+        \ model, text formatting and figure type"
+      tags:
+      - TangledTree
+      x-openapi-router-controller: schematic_api.controllers.tangled_tree_controller
   /validateManifestCsv:
     post:
       description: Validates a manifest in csv form
@@ -1309,6 +1497,26 @@ components:
       schema:
         $ref: '#/components/schemas/UseStrictCamelCase'
       style: form
+    componentLabel:
+      description: The label of a component in a schema
+      explode: false
+      in: path
+      name: componentLabel
+      required: true
+      schema:
+        $ref: '#/components/schemas/ComponentLabel'
+      style: simple
+    includeIndex:
+      description: Whether to include the indexes of the dataframe in the returned
+        JSON string.
+      explode: true
+      in: query
+      name: includeIndex
+      required: false
+      schema:
+        default: false
+        type: boolean
+      style: form
     relationshipType:
       description: "Type of relationship in a schema, such as requiresDependency"
       explode: true
@@ -1318,7 +1526,7 @@ components:
       schema:
         $ref: '#/components/schemas/RelationshipType'
       style: form
-    componentLabel:
+    componentLabelQuery:
       description: The label of a component in a schema
       explode: true
       in: query
@@ -1424,6 +1632,32 @@ components:
       schema:
         default: true
         type: boolean
+      style: form
+    figureType:
+      description: Figure type to generate.
+      explode: true
+      in: query
+      name: figureType
+      required: false
+      schema:
+        default: component
+        enum:
+        - component
+        - dependency
+        type: string
+      style: form
+    textFormat:
+      description: Text formatting type.
+      explode: true
+      in: query
+      name: textFormat
+      required: false
+      schema:
+        default: plain
+        enum:
+        - plain
+        - highlighted
+        type: string
       style: form
   responses:
     InternalServerError:
@@ -1791,6 +2025,10 @@ components:
       type: object
       x-java-class-annotations:
       - '@lombok.Builder'
+    ComponentLabel:
+      description: The label of a component in a schema
+      example: MolecularEntity
+      type: string
     RelationshipType:
       description: A type of schema relationship
       example: requiresDependency
@@ -1824,10 +2062,6 @@ components:
       type: object
       x-java-class-annotations:
       - '@lombok.Builder'
-    ComponentLabel:
-      description: The label of a component in a schema
-      example: MolecularEntity
-      type: string
     RestrictRules:
       default: false
       description: "If True, validation suite will only run with in-house validation\
@@ -1857,6 +2091,13 @@ components:
           title: warnings
           type: array
       title: ManifestValidationResult
+      type: object
+    TangledTreeLayers:
+      description: Tangled tree node layers to display for a given data model
+      type: string
+    TangledTreeText:
+      description: Tangled tree plain or higlighted text to display for a given data
+        model
       type: object
     DatasetsPage_allOf:
       properties:
